Fix autocomplete overflow bug

--- a/src/components/OrderOnline/OrderOnlineStyles.css
+++ b/src/components/OrderOnline/OrderOnlineStyles.css
@@ -85,6 +85,7 @@
     padding-right: calc(0.625em - 1px);
     padding-bottom: calc(0.375em - 1px);
     padding-left: calc(0.625em - 1px);
+    max-height: 120px;
   }
 
   .store-main-content {
