--- a/src/components/OrderOnline/StoreInfo/OrderDeliveryOptions/DeliveryAddressFormStyles.css
+++ b/src/components/OrderOnline/StoreInfo/OrderDeliveryOptions/DeliveryAddressFormStyles.css
@@ -47,7 +47,7 @@
   border-top: 1px solid #e6e6e6;
   border-radius: 0 0 2px 2px;
   height: 20vh;
-  z-index: 1;
+  z-index: 20;
   overflow-y: scroll;
 }
 
