--- a/src/components/Search/SearchBox/SearchBoxStyles.css
+++ b/src/components/Search/SearchBox/SearchBoxStyles.css
@@ -4,7 +4,6 @@
   display: block;
   background-color: var(--body-bkgrd);
   color: #fff;
-  /* height: 100vh; */
 }
 
 .search-header {
@@ -21,6 +20,7 @@
   display: block;
   padding: 0.5rem;
   margin-bottom: 4vh;
+  max-height: 200px;
 }
 
 .searchBox-input {
@@ -67,7 +67,7 @@
   border-top: 1px solid #e6e6e6;
   border-radius: 0 0 2px 2px;
   height: 20vh;
-  z-index: 10;
+  z-index: 20;
   overflow-y: scroll;
 }
 
